// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match a snapshot and render children 1`] = `
<ElCardBodyWrap>
  <div>
    I am a child
  </div>
</ElCardBodyWrap>
`;

exports[`Card should match a snapshot and render children 2`] = `
<ElCardContextMenuItem>
  <div>
    I am a child
  </div>
</ElCardContextMenuItem>
`;

exports[`Card should match a snapshot and render children 3`] = `
<ElCardContextMenuItems>
  <div>
    I am a child
  </div>
</ElCardContextMenuItems>
`;

exports[`Card should match a snapshot and render children 4`] = `
<ElCardContextMenuToggle>
  <div>
    I am a child
  </div>
</ElCardContextMenuToggle>
`;

exports[`Card should match a snapshot and render children 5`] = `
<ElCardContextMenuWrapper>
  <div>
    I am a child
  </div>
</ElCardContextMenuWrapper>
`;

exports[`Card should match a snapshot and render children 6`] = `
<ElCardHeading>
  <div>
    I am a child
  </div>
</ElCardHeading>
`;

exports[`Card should match a snapshot and render children 7`] = `
<ElCardHeadingWrap>
  <div>
    I am a child
  </div>
</ElCardHeadingWrap>
`;

exports[`Card should match a snapshot and render children 8`] = `
<ElCardImageWrap>
  <div>
    I am a child
  </div>
</ElCardImageWrap>
`;

exports[`Card should match a snapshot and render children 9`] = `
<ElCardList>
  <div>
    I am a child
  </div>
</ElCardList>
`;

exports[`Card should match a snapshot and render children 10`] = `
<ElCardListHeading>
  <div>
    I am a child
  </div>
</ElCardListHeading>
`;

exports[`Card should match a snapshot and render children 11`] = `
<ElCardListIcon>
  <div>
    I am a child
  </div>
</ElCardListIcon>
`;

exports[`Card should match a snapshot and render children 12`] = `
<ElCardListItem>
  <div>
    I am a child
  </div>
</ElCardListItem>
`;

exports[`Card should match a snapshot and render children 13`] = `
<ElCardListItemTextPrimary>
  <div>
    I am a child
  </div>
</ElCardListItemTextPrimary>
`;

exports[`Card should match a snapshot and render children 14`] = `
<ElCardListItemTextSecondary>
  <div>
    I am a child
  </div>
</ElCardListItemTextSecondary>
`;

exports[`Card should match a snapshot and render children 15`] = `
<ElCardListItemTextWrap>
  <div>
    I am a child
  </div>
</ElCardListItemTextWrap>
`;

exports[`Card should match a snapshot and render children 16`] = `
<ElCardListMainWrap>
  <div>
    I am a child
  </div>
</ElCardListMainWrap>
`;

exports[`Card should match a snapshot and render children 17`] = `
<ElCardListSubHeading>
  <div>
    I am a child
  </div>
</ElCardListSubHeading>
`;

exports[`Card should match a snapshot and render children 18`] = `
<ElCardMainWrap>
  <div>
    I am a child
  </div>
</ElCardMainWrap>
`;

exports[`Card should match a snapshot and render children 19`] = `
<ElMobileToggle>
  <div>
    I am a child
  </div>
</ElMobileToggle>
`;

exports[`Card should match a snapshot and render children 20`] = `
<ElCardSubHeading>
  <div>
    I am a child
  </div>
</ElCardSubHeading>
`;

exports[`Card should match a snapshot and render children 21`] = `
<ElCardSubHeadingAdditional>
  <div>
    I am a child
  </div>
</ElCardSubHeadingAdditional>
`;

exports[`Card should match a snapshot and render children 22`] = `
<ElCardWrap>
  <div>
    I am a child
  </div>
</ElCardWrap>
`;
